plugins {
    id 'org.springframework.boot' version '3.5.9' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.diffplug.spotless' version '6.25.0' apply false
}

allprojects {
    group = 'com.example'
    version = '0.0.1-SNAPSHOT'
    repositories { mavenCentral() }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'checkstyle'
    apply plugin: 'jacoco'

    // java-library 모듈(module-common, module-domain)은 Spring Boot 플러그인을 적용하지 않아
    // BOM이 자동 주입되지 않으므로 subprojects 레벨에서 명시한다.
    // Spring Boot 플러그인을 적용하는 모듈(module-api, module-chat)은 중복이지만 동일 버전으로 무해하다.
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.9"
        }
    }

    java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }

    // Spring Boot 플러그인이 없는 모듈(module-common, module-domain)에서도
    // @ConfigurationProperties 생성자 바인딩이 동작하도록 -parameters 플래그를 명시한다.
    // (Spring Boot 플러그인은 자동으로 이 플래그를 추가하지만, java-library 모듈은 그렇지 않다)
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << '-parameters'
    }

    configurations {
        compileOnly { extendsFrom annotationProcessor }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    spotless {
        java {
            importOrder('java', 'javax', 'lombok', 'org.springframework', '',
                    '\\#', 'org.junit', '\\#org.junit', 'com.example', '\\#com.example')
            removeUnusedImports()
            palantirJavaFormat()
            formatAnnotations()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    checkstyle {
        toolVersion = '10.12.4'
        configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    }

    // 테스트 코드는 한글/언더스코어 메서드명을 허용하기 위해 Checkstyle 미적용
    tasks.named('checkstyleTest') { enabled = false }

    jacoco { toolVersion = "0.8.11" }

    jacocoTestReport {
        dependsOn test
        reports { xml.required = true; html.required = true }
    }

    jacocoTestCoverageVerification {
        violationRules { rule { limit { minimum = 0.70 } } }
    }

    tasks.named('test') {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }
}
